2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* logger.test: Moved the tests of the new trace facility to a
	* logger_trace.test: separate file, as they require a newer
	  version of tcltest (2.x), and Tcl 8.4 instead of 8.2.

2006-08-18  Michael Schlenker <mic42@users.sourceforge.net>
        
	* logger.tcl:        Applied patch [SF Tcllib 1530725] to 
	* logger.man:	     add a command trace logging facility to
	* logger.test:       logger. This raises the package version
	* pkgIndex.tcl:      to 0.7.
	* loggerUtils.tcl:    Fixed abbreviated subcommands to use
	* loggerAppender.tcl: the full form.
	
2006-04-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* logger.tcl:   Added a convenience command to fully initialize
	* logger.man:   a namespace for logging (create service, import
	* pkgIndex.tcl: commands, set default logging level)

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.test:    Fixed cleanup of temp. files used by testsuite.
	* logger.test: Fixed usage of duplicate test names.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.test: More boilerplate simplified via use of test support.
	* logger.test:
	* loggerUtils.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* loggerUtils.tcl: The utilities require Tcl 8.4, they use
	* loggerUtils.man: 'trace'-APIs not yet present before 8.4.
	* pkgIndex.tcl:
 
	* log.test: Hooked into the new common test support code.
	* logger.test:
	* loggerUtils.test:

2005-12-02  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl:        Fixed bug [SF Tcllib 1329642]. There
	* logger.man:        is now a new global enabled state.
	* logger.test:       This needed a fix to the loggerUtils
	* pkgIndex.tcl:      testsuit, to set a working default log